# lis2hh12-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  register.rs
