[package]
name = "lis2hh12-rs"
description = "An embedded-hal driver for the LIS2HH12 accelerometer that implements the generic accelerometer trait"
documentation = "https://docs.rs/lis2hh12-rs"
repository = "https://github.com/arnstein/lis2hh12-rs"
license = "MIT"
version = "0.1.0"
authors = ["Arnstein Kleven <arnsteinkleven@gmail.com>"]
edition = "2018"
keywords = ["embedded-hal-driver", "accelerometer"]

include = [
    "src/lib.rs",
    "src/register.rs",
    "Cargo.toml",
    "README.md"
    ]

[dependencies]
embedded-hal = "0.2.3"
accelerometer = { version = "~0.6", features = ["orientation"] }
